Alacritty opacity, neotree git status keybind

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,6 +7,8 @@ program = "/usr/bin/zsh"
 normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 size = 11.25
 
+[window]
+opacity = 0.85
 
 [mouse]
 hide_when_typing = true
