--- a/.config/sway/config
+++ b/.config/sway/config
@@ -54,12 +54,9 @@ bindsym $mod+Backspace exec $lock
 
 
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-
 # Hint: You can get the names of your outputs by running: swaymsg -t get_outputs
-# Carslaw monitor configuration 2025:
+
+# *** Carslaw monitor configuration 2025:
 #  ############
 #  #          #
 #  #          ##################
@@ -75,6 +72,7 @@ output eDP-1 resolution 1920x1080 position 2560,500
 output HDMI-A-1 resolution 2560x1440 position -1440,-450
 output HDMI-A-1 transform 90
 
+
 # Workspace-output configuration
 workspace 1 output HDMI-A-1
 workspace 2 output DP-3
@@ -83,6 +81,9 @@ workspace 3 output eDP-1
 # When reconnecting DP-3, it sometimes becomes DP-4
 output DP-4 resolution 2560x1440 position 0,0
 workspace 2 output DP-4
+
+# *** Home monitor config:
+#output HDMI-A-1 resolution 1920x1080 position 0,0
 
 
 ### Idle configuration
@@ -134,6 +135,9 @@ input type:touchpad {
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+    # Power off
+    bindsym Control+Alt+Delete exec poweroff
 #
 # Moving around:
 #
@@ -278,7 +282,7 @@ bar {
         focused_workspace $focuslite $focusmute #FFFFFF
         urgent_workspace $urgent $urgent #FFFFFF
         background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
+        inactive_workspace #323232 #32323288 #aaaaaa
     }
 }
 
